# mcts-tools

./: .env.sample  README.md  main.py  mypy.ini  pyproject.toml
analyze_match_data/: __init__.py
analyze_match_data/gateways/: __init__.py  core.py  frame.py  types.py
analyze_match_data/learn/: __init__.py
analyze_match_data/usecase/: core.py  entities.py
config/: __init__.py  env.py  paths.py
gamerecord_paths/: core.py
generated-stubs/icecream/: __init__.pyi  coloring.pyi  icecream.pyi
