[tool.poetry]
name = "mcts-tools"
version = "0.1.0"
description = "mcts helper functions"
authors = ["kimuson <s1250131@u-aizu.ac.jp>"]

[tool.poetry.scripts]
check = "mypy"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
icecream = "^2.1.0"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.800"
autopep8 = "^1.5.5"
mypyls = {url = "https://github.com/matangover/mypyls/archive/master.zip#egg=mypyls", extras = ["default-mypy"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
